# billingo-python

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
clientapi_billingo/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
docs/: Address.md  BankAccount.md  BankAccountApi.md  BankAccountList.md  Category.md  CheckTaxNumberMessage.md  ClientError.md  ClientErrorResponse.md  ConversationRate.md  CorrectionType.md  Country.md  CreateDocumentExport.md  Currency.md  CurrencyApi.md  DateType.md  Discount.md  DiscountType.md  Document.md  DocumentAncestor.md  DocumentApi.md  DocumentBankAccount.md  DocumentBlock.md  DocumentBlockApi.md  DocumentBlockList.md  DocumentBlockType.md  DocumentCancellation.md  DocumentExportApi.md  DocumentExportFilterExtra.md  DocumentExportId.md  DocumentExportOtherOptions.md  DocumentExportQueryType.md  DocumentExportSortBy.md  DocumentExportStatus.md  DocumentExportStatusState.md  DocumentExportType.md  DocumentForm.md  DocumentFormat.md  DocumentInsert.md  DocumentInsertItemsInner.md  DocumentInsertType.md  (+63 more)
example/: get_server_time.py
test/: test_address.py  test_bank_account.py  test_bank_account_api.py  test_bank_account_list.py  test_category.py  test_check_tax_number_message.py  test_client_error.py  test_client_error_response.py  test_conversation_rate.py  test_correction_type.py  test_country.py  test_create_document_export.py  test_currency.py  test_currency_api.py  test_date_type.py  test_discount.py  (+87 more)
(+108 files in other folders)
