[tool.poetry]
name = "clientapi_billingo"
version = "1.0.0"
description = "Billingo API v3"
authors = ["Billingo Support <hello@billingo.hu>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/client-api/billingo-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Billingo API v3"]
include = ["clientapi_billingo/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
